--- a/index.html
+++ b/index.html
@@ -2,8 +2,32 @@
 <html>
     <head>
         <title>JSG</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <script type="text/javascript" src="js/main.js"></script>
+        <div id="game-over-overlay">
+    </div>
+
+    <div id="game-over">
+      <h1>GAME OVER</h1>
+      <button id="play-again">Play Again</button>
+    </div>
+
+    <div class="wrapper">
+      <div id="instructions">
+        <div>
+          move with <span class="key">arrows</span> or <span class="key">wasd</span>
+        </div>
+        <div>
+          shoot with <span class="key">space</span>
+        </div>
+      </div>
+
+      <div id="score"></div>
+    </div>
+        <script type="text/javascript" src="js/resources.js"></script>
+        <script type="text/javascript" src="js/input.js"></script>
+        <script type="text/javascript" src="js/sprite.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
